<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="label"
            type="java.lang.String" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/home_v2_item_event_tag_layout_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/orange"
            android:textSize="13sp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@{label}" />

    </LinearLayout>
</layout>