...
        app:layout_constraintBottom_toTopOf="@+id/ui_button_about"
        app:layout_constraintTop_toBottomOf="@+id/ui_tv_title2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:id="@+id/ui_button_login"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="15sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
...
